Add dark mode switch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
         <div class="main">
             <div class="left">
+                <div class="themeSwitch">
+                    <img class="switch" />
+                </div>
                 <p class="heading">Calendar</p>
                 <div class="heading-line"></div>
                 <div class="wrapper">
